--- a/src/App.css
+++ b/src/App.css
@@ -18,25 +18,20 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
 
 .card {
-  padding: 2em;
+  width: 170px;
+  border: 1px solid beige;
+  border-radius: 10px;
 }
 
-.read-the-docs {
-  color: #888;
+.card-img {
+  width: 150px;
+  object-fit: cover;
 }
