--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,36 @@
   width: 150px;
   object-fit: cover;
 }
+.parent{
+  padding: 20px;
+  height: 62vh;
+  background-color: #bbbbbb;
+  color:#000;
+}
+
+
+.child{
+  width: 90%;
+  height: 60%;
+  display: block;
+  margin: auto;
+  background-color: #8282f2;
+}
+
+
+.lobo-estepario{
+  background-color: beige;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 50px;
+  margin-right: 10px;
+  color: #000;
+  padding: 10px;
+}
+
+
+.lobo{
+  width: 80px;
+  height: 80px;
+  margin-right: 10px;
+}
