--- a/src/App.css
+++ b/src/App.css
@@ -24,47 +24,23 @@
   justify-content: space-evenly;
 }
 
+.list-container{
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
 
 .card {
-  width: 170px;
+  width: 250px;
+  height: 300px;
   border: 1px solid beige;
+  background-color: #5e5e5e80;
   border-radius: 10px;
-}
-
-.card-img {
-  width: 150px;
-  object-fit: cover;
-}
-.parent{
-  padding: 20px;
-  height: 62vh;
-  background-color: #bbbbbb;
-  color:#000;
-}
-
-
-.child{
-  width: 90%;
-  height: 60%;
-  display: block;
-  margin: auto;
-  background-color: #8282f2;
-}
-
-
-.lobo-estepario{
-  background-color: beige;
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 50px;
-  margin-right: 10px;
-  color: #000;
+  margin: 10px;
   padding: 10px;
 }
 
-
-.lobo{
-  width: 80px;
-  height: 80px;
-  margin-right: 10px;
+.card-img {
+  width: 200px;
+  object-fit: cover;
+  margin-bottom: 15px;
 }
